// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withForwardedRef renders 1`] = `
<Comp
  className="foo"
  forwardedRef={
    Object {
      "current": null,
    }
  }
>
  Testing 123
</Comp>
`;

exports[`withForwardedRef renders, custom displayName 1`] = `
<FooBar
  className="foo"
  forwardedRef={
    Object {
      "current": null,
    }
  }
>
  Testing 123
</FooBar>
`;
